--- a/css/styles.css
+++ b/css/styles.css
@@ -65,18 +65,7 @@ ol {
   }
 
   /*-------------HEADER----------*/
- .strategy-item::before{
-      display: block;
-      content: "";
-    height: 12px;
-    
-    background-color: var(--background-color);
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    margin-bottom: 30px;
- }
-
+ 
   .header
    {
      border-bottom: 1px solid #ECECEC;}
@@ -198,11 +187,11 @@ vertical-align: middle;
   text-transform: uppercase;
   color:var(--minor-title-coolor);
 
-  width: 696px;
+
  margin-left: auto;
  margin-right: auto;
 margin-bottom:30px ;
-padding-top: 200px;
+
 }
 
 
@@ -228,19 +217,16 @@ margin: auto;
 
   }
   .hero{
-text-align: center;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    max-width: 1600px;
+    height: 600px;
+    margin: 0 auto;
+      background-image: linear-gradient(to right, #2f303a66, #2f303a66), url('../images/Img\ fon.jpg'); 
+    background-color: var(--secondary-bg-color);
+    text-align: center;
 }
 
-.hero-container {
-  max-width: 1600px;
-  height: 600px;
-  background-image: linear-gradient(
-    rgba(47, 48, 58, 0.4),
-    rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/Img\ fon.jpg);
- 
-}
 
 /*---------strategy---------*/
 
@@ -273,6 +259,7 @@ color:var(--predominant-text-color);
   display: flex;
 
 }
+
 .strategy-item{
   margin-right: 30px;
   width: 270px;
@@ -282,7 +269,10 @@ color:var(--predominant-text-color);
   margin-right: 0;
     }
 
-    .strategy-item::before{
+
+
+
+    /*.strategy-item::before{
       display: block;
       content: "";
     height: 120px;
@@ -308,6 +298,24 @@ color:var(--predominant-text-color);
 
   .strategy-item:nth-child(4):before{
     background-image: url("../images/astronaut.svg")}
+    .before{
+      width: 70px;
+      height: 70px; 
+    }*/
+    .icon-strategy{
+      width: 270px;
+      height: 120px;
+       
+    background-color: #F5F4FA;;
+       box-sizing: border-box;
+       border-radius: 4px;
+       fill: #212121;;
+       
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       margin-bottom: 30px;
+      }
 
 
     /*-------ABOUT--------*/
@@ -643,6 +651,9 @@ border-radius: 4px;
   color: var(--minor-title-coolor);
   background-color:var(--hover-kolor);
   border-radius: 4px;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+border-radius: 4px;
+
 }
 
   .main-title{
@@ -696,4 +707,6 @@ margin-right: 0;
     border-top: 0;
     padding: 24px 20px;
   }
- 
+ .main-item:hover{
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+ }
