--- a/css/styles.css
+++ b/css/styles.css
@@ -345,7 +345,7 @@ line-height: 1.18;
 text-align: center;
 letter-spacing: 0.03em;
 color:var(--predominant-text-color);
-
+margin-bottom: 16px;
 
 }
 
@@ -388,7 +388,9 @@ color:var(--predominant-text-color);
       .team-link-soc{
         fill:var(--contact-soc);
       }
-      .team-link-soc:hover{
+      .team-link-soc:hover,
+      .team-link-soc:focus
+      {
        background-color:var(--hover-kolor);
        fill: var(--background-nice-color);
       }
@@ -399,6 +401,7 @@ color:var(--predominant-text-color);
     }
     .team-item-soc:not(:last-child) {
       margin-right: 10px;}
+
 
 
       /*------CLIENT-------*/
@@ -440,12 +443,18 @@ color:var(--predominant-text-color);
       .clients-list-item:not(:last-child){
         margin-right: 30px;
       }
-      .clients-link:hover{
+      .clients-link:hover,
+      .clients-link:focus
+      {
         border-radius: 4px;
         border: 1px solid var(--hover-kolor)
       }
-      
-      .clients-link:hover .clients-icon{
+
+  
+  
+      .clients-link:hover .clients-icon,
+      .clients-link:focus .clients-icon
+      {
      
         fill: var(--hover-kolor);
        
@@ -563,7 +572,9 @@ margin-bottom: 20px;
     .footer-link-cos{
       fill:var(--background-nice-color)
     }
-    .footer-link-cos:hover{
+    .footer-link-cos:hover,
+    .footer-link-cos:focus
+    {
      background-color:var(--hover-kolor);
      fill: var(--background-nice-color);
     }
@@ -642,9 +653,7 @@ line-height: 1.87;
 letter-spacing: 0.03em;
 color:var(--predominant-text-color);
   }
-  .main-link{
-    text-decoration: none;
-  }
+  
   
   .main-list-button{
     margin-bottom: 50px;
@@ -665,6 +674,7 @@ margin-right: 0;
   }
   .main-item:nth-last-child(-n+3){
     margin-bottom: 0 ;
+   
   }
 
 
@@ -677,6 +687,14 @@ margin-right: 0;
     border-top: 0;
     padding: 24px 20px;
   }
- .main-item:hover{
+ .main-link{
+    text-decoration: none;
+    display: block;
+  }
+
+  
+ .main-item:hover,
+ .main-item:focus
+ {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
  }
